@@ -1,3 +1,8 @@
+2006-12-18  Francis Kung  <fkung@redhat.com>
+
+	* gnu/java/awt/peer/gtk/BufferedImageGraphics.java
+	(drawGlyphVector): Round bounds instead of casting & truncating..
+
 2006-12-17  Tom Tromey  <tromey@redhat.com>
 
 	* javax/sound/sampled/BooleanControl.java (type): Removed unused
